<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="scoreViewModel"
            type="com.bgbrlk.scoreboardbrlk.ui.score.ScoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_left_half"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?colorPrimary"
            android:contentDescription='@{@string/touch_area_home_team_description(scoreViewModel.counterTeam1)}'
            android:onClick="@{() -> scoreViewModel.addPointTeam1() }"
            app:layout_constraintBottom_toTopOf="@id/view_right_half"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_right_half"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?colorSecondary"
            android:contentDescription='@{@string/touch_area_guest_team_description(scoreViewModel.counterTeam2)}'
            android:onClick="@{() -> scoreViewModel.addPointTeam2() }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_left_half" />

        <TextView
            android:id="@+id/textview_home_title"
            style="?attr/textAppearanceDisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_left_half" />

        <TextView
            android:id="@+id/textview_counter_team1"
            style="?attr/textAppearanceDisplayLarge"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription='@{@string/textview_home_team_description(scoreViewModel.counterTeam1)}'
            android:text="@{ String.valueOf(scoreViewModel.counterTeam1) }"
            app:layout_constraintBottom_toBottomOf="@+id/view_left_half"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_home_title"
            tools:text="0" />

        <TextView
            android:id="@+id/textview_guest_title"
            style="@style/TextAppearance.App.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_left_half" />

        <TextView
            android:id="@+id/textview_counter_team2"
            style="?attr/textAppearanceDisplayLarge"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@{ String.valueOf(scoreViewModel.counterTeam2) }"
            android:contentDescription='@{@string/textview_guest_team_description(scoreViewModel.counterTeam2)}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_guest_title"
            tools:text="0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Widget.App.FloatingActionButton"
            android:id="@+id/fab_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/reset_score_description"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_flip"
            style="@style/Widget.App.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/flip_counter_description"
            android:onClick="@{() -> scoreViewModel.flipCounters() }"
            android:rotation="90"
            android:src="@drawable/ic_flip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/settings_description"
            android:src="@drawable/ic_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>