<resources>
    <string name="app_name">Scoreboard Lite</string>
    <string name="privacy_policy_url" translatable="false">https://brunobrlk-github-io.vercel.app/</string>
    <string name="home">Home</string>
    <string name="guest">Guest</string>
    <string name="new_game">New Game</string>
    <string name="match_score">Match Score</string>
    <string name="vs_label" translatable="false">vs</string>
    <string name="reset_score_description">Reset Score</string>
    <string name="flip_score_description">Flip Score</string>
    <string name="settings_icon_description">Settings</string>
    <string name="flip_counter_description">Flip Counter</string>
    <string name="settings_description">Settings</string>
    <string name="save_description">Save</string>
    <string name="points_to_win">Points to win</string>
    <string name="points_on_tap">Points on tap</string>
    <string name="textview_home_team_description">Home is %1$s</string>
    <string name="textview_guest_team_description">Guest is %1$s</string>
    <string name="textview_home_score">Home %1$s</string>
    <string name="textview_guest_score">Guest %1$s</string>
    <string name="increase_value_button_description">Increase value of %1$s</string>
    <string name="decrease_value_button_description">Decrease value of %1$s</string>
    <string name="touch_area_home_team_description">Home Score is %1$s. Add points</string>
    <string name="touch_area_guest_team_description">Guest Score is %1$s. Add points</string>
    <string name="textview_read_our_privacy_policy">Read our Privacy Policy</string>
</resources>
